[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-egregora-adaptive-colorfix"
version = "0.1.2"
description = "Adaptive color fix custom node for ComfyUI with stronger edge protection and luminance-aware chroma fusion."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Lucas Gattas" }
]
dependencies = [
  "numpy",
  "opencv-python",
  "PyWavelets",
  "torch"
]

[project.urls]
Repository = "https://github.com/lucasgattas/ComfyUI-Egregora-Adaptive-Colorfix"
Documentation = "https://github.com/lucasgattas/ComfyUI-Egregora-Adaptive-Colorfix#readme"
"Bug Tracker" = "https://github.com/lucasgattas/ComfyUI-Egregora-Adaptive-Colorfix/issues"

[tool.comfy]
PublisherId = "mrgattax"
DisplayName = "ComfyUI-Egregora-Adaptive-Colorfix"
Icon = ""
includes = []
